tooling/nargo_cli/tests/snapshots/compile_failure/dup_trait_items_6/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: struct `MyStruct` is never constructed
  ┌─ src/main.nr:6:8
  │
6 │ struct MyStruct {
  │        -------- struct is never constructed
  │

error: Duplicate definitions of trait associated item with name SomeFunc found
  ┌─ src/main.nr:2:6
  │
2 │   fn SomeFunc() { };
  │      -------- First definition found here
3 │   fn SomeFunc() { };
  │      -------- Second definition found here
  │

error: Duplicate definitions of trait associated item with name SomeFunc found
  ┌─ src/main.nr:2:6
  │
2 │   fn SomeFunc() { };
  │      -------- First definition found here
3 │   fn SomeFunc() { };
  │      -------- Second definition found here
  │

error: Expected a trait item but found ';'
  ┌─ src/main.nr:2:20
  │
2 │   fn SomeFunc() { };
  │                    -
  │

error: Expected a trait item but found ';'
  ┌─ src/main.nr:3:20
  │
3 │   fn SomeFunc() { };
  │                    -
  │

Aborting due to 4 previous errors
